log/build_2024-11-04_03-12-44/my_py_pkg/stderr.log
  File "/home/jr/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py", line 33
    self.get_logger().info("HELLO" str(self.counter_))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

